# roles

./: 404.html  Cargo.toml  flake.nix  hashmap.json  hc_progenitor.html  index.html  introduction.html  network.sh  overview.html  package.json  pnpm-lock.yaml  roles-store.html  setup.html
assets/: app.B4ld3YIK.js  app.CYis6YMo.js  app.D9WAnxiH.js  app.DEr8Zaeb.js  elements_all-roles.md.2XbCil84.js  elements_all-roles.md.2XbCil84.lean.js  elements_all-roles.md.BfNr3RqQ.js  elements_all-roles.md.BfNr3RqQ.lean.js  elements_all-roles.md.DhvZhr4L.js  elements_all-roles.md.DhvZhr4L.lean.js  elements_all-roles.md.sHlU9bnF.js  elements_all-roles.md.sHlU9bnF.lean.js  elements_create-role-claim.md.D2LPlBZ8.js  elements_create-role-claim.md.D2LPlBZ8.lean.js  elements_role-claim-detail.md.PV9b4fg6.js  elements_role-claim-detail.md.PV9b4fg6.lean.js  elements_role-claim-summary.md.D5bPwAMc.js  elements_role-claim-summary.md.D5bPwAMc.lean.js  elements_role-details.md.BMXxrBBL.js  elements_role-details.md.BMXxrBBL.lean.js  elements_roles-for-agent.md.CCvjUbis.js  elements_roles-for-agent.md.CCvjUbis.lean.js  hc_progenitor.md.B78d7EDK.js  hc_progenitor.md.B78d7EDK.lean.js  hc_progenitor.md.BziD6oCI.js  hc_progenitor.md.BziD6oCI.lean.js  index.md.2buomvo0.js  index.md.BGJw14zb.lean.js  (+46 more)
zomes/coordinator/roles/: Cargo.toml  zome.nix
zomes/coordinator/roles/src/: all_role_claims_deleted_proof.rs  all_roles.rs  assignees.rs  lib.rs  notifications.rs  profiles.rs  progenitors.rs  remote_signal.rs  role_claim.rs  unassignments.rs  utils.rs
zomes/coordinator/roles/tests/: all_roles.rs  role_claim.rs
zomes/coordinator/roles/tests/common/: mod.rs
zomes/integrity/roles/: Cargo.toml  zome.nix
zomes/integrity/roles/src/: admins.rs  all_role_claims_deleted_proof.rs  assignees.rs  lib.rs  pending_unassignments.rs  profiles.rs  progenitors.rs  role_claim.rs  roles.rs
(+4831 files in other folders)
