[package]
name = "roles"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "roles"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

roles_integrity = { path = "../../integrity/roles", package = "roles_integrity" }
hc_zome_trait_notifications = { git = "https://github.com/darksoil-studio/notifications", branch = "main" }
hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }
xliff = { git = "https://github.com/kkostov/hb-rs-xliff", branch = "master" }

[dev-dependencies]
fixt = "0.3.2"
futures = { version = "0.3", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

